Fix #3055